# chaoscatcher3

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/chaoscatcher/: __init__.py  _util.py  cli.py  gui.py  paths.py  safety.py  storage.py  timeparse.py
tests/: test_cli_helpers.py  test_storage.py  test_timeparse.py
