[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaoscatcher"
version = "0.3.0"
description = "ChaosCatcher self-care suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cc = "chaoscatcher.cli:main"
