[build-system]
requires = ["setuptools>=68", "wheel"]
[project.scripts]
cc = "chaoscatcher.cli:main"
ccgui = "chaoscatcher.gui:run_gui"

[project]
name = "chaoscatcher"
version = "0.3.0"
description = "ChaosCatcher self-care suite"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

